refactor(elvis): ignore deprecated files

--- a/packages/elvis/src/utilities/grid.scss
+++ b/packages/elvis/src/utilities/grid.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable */
 /*
 
 The CSSen for this grid-system is based on https://getbootstrap.com/docs/4.4/layout/grid/, using the following license:
