--- a/packages/elvis/src/components/form/select.scss
+++ b/packages/elvis/src/components/form/select.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable */
 @use '../../variables/colors.scss';
 @use '../../variables/animation.scss';
 @use '../../variables/shared-sizes';
