--- a/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
@@ -145,10 +145,10 @@
   <elvia-accordion
     type="overflow"
     overflowHeight="500"
-    [openLabel]="'Show all'"
-    [closeLabel]="'Hide'"
-    [labelPosition]="'right'"
-    [size]="'small'"
+    openLabel="Show all"
+    closeLabel="Hide"
+    labelPosition="right"
+    size="small"
     [isOpen]="accordionIsOpen"
     (onOpen)="accordionIsOpen = true"
     (onClose)="accordionIsOpen = false"
