--- a/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.scss
@@ -1,6 +1,38 @@
+@use '@elvia/elvis/src/utilities/breakpoints.scss' as breakpoints;
+
 .e-list {
   .prop-element-title {
     font-size: 14px;
     line-height: 22px;
+  }
+}
+
+.changelog-filter {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+  row-gap: 16px;
+
+  .e-form-field {
+    margin-left: auto;
+    @include breakpoints.breakpoint-up(Mobile) {
+      display: none;
+    }
+  }
+}
+
+.no-properties-found {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  padding: 32px;
+  width: 100%;
+  height: 200px;
+
+  img {
+    width: 75px;
   }
 }
