--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -324,6 +324,7 @@
       [value]="defaultPaginationValue"
       [alignment]="'right'"
       dropdownMenuPosition="top"
+      (valueOnChange)="logValue('Pagination', $event.detail.value)"
     ></elvia-pagination>
   </div>
 
