--- a/packages/web/src/styles.scss
+++ b/packages/web/src/styles.scss
@@ -10,6 +10,9 @@
 @use '@elvia/elvis/src/utilities/breakpoints.scss' as breakpoints;
 @use '@elvia/elvis/src/variables/typography.scss' as typography;
 
+// TODO: This will be moved to elvis
+@use '@elvia/elvis-colors/dist/themeVariables' as ThemeVariables;
+
 // Prebuilt css for enabling use of overlays from @angular/cdk
 @import '@angular/cdk/overlay-prebuilt.css';
 
