Lego 1882: Theme, teknisk losning hvordan loser vi theme pa komponenter og i systemer (#1196)
* add theme types

* add light and dark theme

* add getThemeColor, export new things from colors package

* update colors build

* add getCustomThemeColor to elvia-colors

* add theming to formFieldStyles and overlay in toolbox

* add support for css variable colors to icons

* add useCurrentTheme hook to toolbox

* generate theme css variables in colors package

* add useCurrentTheme tests

* add web dependency on colors

* add dark theme to button and iconButton in toolbox

--- a/packages/elvis/src/variables/typography.scss
+++ b/packages/elvis/src/variables/typography.scss
@@ -45,7 +45,7 @@ $font-family-secondary: 'Red Hat Text', Verdana, sans-serif;
 }
 
 body {
-  color: #000;
+  color: var(--e-color-text-primary, #000);
   font-family: $font-family;
 }
 
