--- a/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
@@ -10,6 +10,37 @@
 <div class="page-body">
   <app-component-subsection>
     <ng-container ngProjectAs="sectionContent">
+      <div class="contact-profile-container kari">
+        <div class="contact-profile kari">
+          <div style="position: relative">
+            <div (click)="veryImportantFunction('kari', '🐡')" id="kari" class="profile-emoji">🐡</div>
+            <div
+              class="e-content-loader e-content-loader--circle profile-image-loader"
+              *ngIf="!loadedImgKari"
+            ></div>
+            <img
+              alt="Kari"
+              class="profile-image"
+              src="./../../../../assets/contact/Kari.jpg"
+              (load)="hideContentLoader($event, 'kari')"
+            />
+          </div>
+          <div class="profile-info">
+            <div class="e-title-caps">Product lead</div>
+            <div class="e-title-sm e-mt-8">Kari Clifford</div>
+            <div class="e-text-md" style="margin-top: 4px; margin-bottom: 16px">kari.clifford@elvia.no</div>
+            <div class="profile-slack-button">
+              <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U03NGQQJK16">
+                <span class="e-btn__icon">
+                  <img alt="" src="./../../../../assets/contact/slack-icon.svg" />
+                </span>
+                <span class="e-btn__title">Slack Kari</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="contact-profile-container fride">
         <div class="contact-profile fride">
           <div style="position: relative">
