docs(header): LEGO-2235

--- a/packages/web/src/app/doc-pages/components/header-doc/header-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/header-doc/header-doc.component.html
@@ -14,13 +14,10 @@
   <!-- USAGE -->
   <app-component-section [sectionTitle]="'Usage'">
     <ng-container ngProjectAs="sectionContent">
-      <app-component-subsection sectionTitle="The internal header">
-        <ng-container ngProjectAs="sectionContent">
-          The internal header contains a general top menu and a side navigation section. The navigation bar on
-          the side contain app-specific tabs, while the top menu gathers general navigation, such as the app
-          switch and any global settings.
-        </ng-container>
-      </app-component-subsection>
+      The header contains a general top menu and a side navigation section. The navigation bar on the side
+      contain app-specific tabs, while the top menu gathers general navigation, such as the app switch and any
+      global settings.
+
       <app-component-subsection sectionTitle="Sidenav items">
         <ng-container ngProjectAs="sectionContent">
           Since routing usually is performed by a framework-specific library, the DOM for the sidenav items is
