Added image and emoji

--- a/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
@@ -13,7 +13,7 @@
       <div class="contact-profile-container kari">
         <div class="contact-profile kari">
           <div style="position: relative">
-            <div (click)="veryImportantFunction('kari', '🐡')" id="kari" class="profile-emoji">🐡</div>
+            <div (click)="veryImportantFunction('kari', '🐧')" id="kari" class="profile-emoji">🐧</div>
             <div
               class="e-content-loader e-content-loader--circle profile-image-loader"
               *ngIf="!loadedImgKari"
@@ -44,7 +44,7 @@
       <div class="contact-profile-container fride">
         <div class="contact-profile fride">
           <div style="position: relative">
-            <div (click)="veryImportantFunction('fride', '🐡')" id="fride" class="profile-emoji">🐡</div>
+            <div (click)="veryImportantFunction('fride', '🦙')" id="fride" class="profile-emoji">🦙</div>
             <div
               class="e-content-loader e-content-loader--circle profile-image-loader"
               *ngIf="!loadedImgFride"
