--- a/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
@@ -21,7 +21,7 @@
             <img
               alt="Kari"
               class="profile-image"
-              src="./../../../../assets/contact/Kari.jpg"
+              src="assets/contact/Kari.jpg"
               (load)="hideContentLoader($event, 'kari')"
             />
           </div>
@@ -32,7 +32,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U03NGQQJK16">
                 <span class="e-btn__icon">
-                  <img alt="" src="./../../../../assets/contact/slack-icon.svg" />
+                  <img alt="" src="assets/contact/slack-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Kari</span>
               </a>
@@ -52,7 +52,7 @@
             <img
               alt="Fride"
               class="profile-image"
-              src="./../../../../assets/contact/Fride.jpg"
+              src="assets/contact/Fride.jpg"
               (load)="hideContentLoader($event, 'fride')"
             />
           </div>
@@ -63,7 +63,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U01BLN1QTHD">
                 <span class="e-btn__icon">
-                  <img alt="" src="./../../../../assets/contact/slack-icon.svg" />
+                  <img alt="" src="assets/contact/slack-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Fride</span>
               </a>
@@ -83,7 +83,7 @@
             <img
               alt="Trygve"
               class="profile-image"
-              src="./../../../../assets/contact/Trygve.png"
+              src="assets/contact/Trygve.png"
               (load)="hideContentLoader($event, 'trygve')"
             />
           </div>
@@ -96,7 +96,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U02M1T23PJM">
                 <span class="e-btn__icon">
-                  <img alt="" src="./../../../../assets/contact/slack-icon.svg" />
+                  <img alt="" src="assets/contact/slack-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Trygve</span>
               </a>
@@ -118,7 +118,7 @@
             <img
               alt="Viljar"
               class="profile-image"
-              src="./../../../../assets/contact/Viljar.png"
+              src="assets/contact/Viljar.png"
               (load)="hideContentLoader($event, 'viljar')"
             />
           </div>
@@ -129,7 +129,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U02HB13D551">
                 <span class="e-btn__icon">
-                  <img alt="" src="./../../../../assets/contact/slack-icon.svg" />
+                  <img alt="" src="assets/contact/slack-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Viljar</span>
               </a>
@@ -151,7 +151,7 @@
             <img
               alt="Hilde"
               class="profile-image"
-              src="./../../../../assets/contact/Hilde.jpg"
+              src="assets/contact/Hilde.jpg"
               (load)="hideContentLoader($event, 'hilde')"
             />
           </div>
@@ -164,7 +164,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U01A2FKJYCQ">
                 <span class="e-btn__icon">
-                  <img alt="" src="./../../../../assets/contact/slack-icon.svg" />
+                  <img alt="" src="assets/contact/slack-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Hilde</span>
               </a>
@@ -184,7 +184,7 @@
             <img
               alt="tom"
               class="profile-image"
-              src="./../../../../assets/contact/Tom.png"
+              src="assets/contact/Tom.png"
               (load)="hideContentLoader($event, 'tom')"
             />
           </div>
@@ -195,7 +195,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U03MESY0YLD">
                 <span class="e-btn__icon">
-                  <img alt="" src="./../../../../assets/contact/slack-icon.svg" />
+                  <img alt="" src="assets/contact/slack-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Tom</span>
               </a>
@@ -226,7 +226,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U018X0SN05C">
                 <span class="e-btn__icon">
-                  <img alt="" src="./../../../../assets/contact/slack-icon.svg" />
+                  <img alt="" src="assets/contact/slack-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Erik</span>
               </a>
