--- a/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
@@ -10,10 +10,41 @@
 <div class="page-body">
   <app-component-subsection>
     <ng-container ngProjectAs="sectionContent">
+      <div class="contact-profile-container kari">
+        <div class="contact-profile kari">
+          <div style="position: relative">
+            <div (click)="veryImportantFunction('kari', '🐧')" id="kari" class="profile-emoji">🐧</div>
+            <div
+              class="e-content-loader e-content-loader--circle profile-image-loader"
+              *ngIf="!loadedImgKari"
+            ></div>
+            <img
+              alt="Kari"
+              class="profile-image"
+              src="assets/contact/Kari.jpg"
+              (load)="hideContentLoader($event, 'kari')"
+            />
+          </div>
+          <div class="profile-info">
+            <div class="e-title-caps">Product lead</div>
+            <div class="e-title-sm e-mt-8">Kari Clifford</div>
+            <div class="e-text-md" style="margin-top: 4px; margin-bottom: 16px">kari.clifford@elvia.no</div>
+            <div class="profile-slack-button">
+              <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U03NGQQJK16">
+                <span class="e-btn__icon">
+                  <img alt="" src="assets/contact/slack-icon.svg" />
+                </span>
+                <span class="e-btn__title">Slack Kari</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="contact-profile-container fride">
         <div class="contact-profile fride">
           <div style="position: relative">
-            <div (click)="veryImportantFunction('fride', '🐡')" id="fride" class="profile-emoji">🐡</div>
+            <div (click)="veryImportantFunction('fride', '🦙')" id="fride" class="profile-emoji">🦙</div>
             <div
               class="e-content-loader e-content-loader--circle profile-image-loader"
               *ngIf="!loadedImgFride"
@@ -21,7 +52,7 @@
             <img
               alt="Fride"
               class="profile-image"
-              src="./../../../../assets/contact/Fride.jpg"
+              src="assets/contact/Fride.jpg"
               (load)="hideContentLoader($event, 'fride')"
             />
           </div>
@@ -32,7 +63,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U01BLN1QTHD">
                 <span class="e-btn__icon">
-                  <img alt="" src="./../../../../assets/contact/slack-icon.svg" />
+                  <img alt="" src="assets/contact/slack-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Fride</span>
               </a>
@@ -52,7 +83,7 @@
             <img
               alt="Trygve"
               class="profile-image"
-              src="./../../../../assets/contact/Trygve.png"
+              src="assets/contact/Trygve.png"
               (load)="hideContentLoader($event, 'trygve')"
             />
           </div>
@@ -65,7 +96,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U02M1T23PJM">
                 <span class="e-btn__icon">
-                  <img alt="" src="./../../../../assets/contact/slack-icon.svg" />
+                  <img alt="" src="assets/contact/slack-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Trygve</span>
               </a>
@@ -87,7 +118,7 @@
             <img
               alt="Viljar"
               class="profile-image"
-              src="./../../../../assets/contact/Viljar.png"
+              src="assets/contact/Viljar.png"
               (load)="hideContentLoader($event, 'viljar')"
             />
           </div>
@@ -98,7 +129,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U02HB13D551">
                 <span class="e-btn__icon">
-                  <img alt="" src="./../../../../assets/contact/slack-icon.svg" />
+                  <img alt="" src="assets/contact/slack-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Viljar</span>
               </a>
@@ -120,7 +151,7 @@
             <img
               alt="Hilde"
               class="profile-image"
-              src="./../../../../assets/contact/Hilde.jpg"
+              src="assets/contact/Hilde.jpg"
               (load)="hideContentLoader($event, 'hilde')"
             />
           </div>
@@ -133,7 +164,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U01A2FKJYCQ">
                 <span class="e-btn__icon">
-                  <img alt="" src="./../../../../assets/contact/slack-icon.svg" />
+                  <img alt="" src="assets/contact/slack-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Hilde</span>
               </a>
@@ -153,7 +184,7 @@
             <img
               alt="tom"
               class="profile-image"
-              src="./../../../../assets/contact/Tom.png"
+              src="assets/contact/Tom.png"
               (load)="hideContentLoader($event, 'tom')"
             />
           </div>
@@ -164,7 +195,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U03MESY0YLD">
                 <span class="e-btn__icon">
-                  <img alt="" src="./../../../../assets/contact/slack-icon.svg" />
+                  <img alt="" src="assets/contact/slack-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Tom</span>
               </a>
@@ -195,7 +226,7 @@
             <div class="profile-slack-button">
               <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U018X0SN05C">
                 <span class="e-btn__icon">
-                  <img alt="" src="./../../../../assets/contact/slack-icon.svg" />
+                  <img alt="" src="assets/contact/slack-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Erik</span>
               </a>
