--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -309,10 +309,11 @@
   <div class="example-wrapper">
     <h3>Paginator</h3>
     <elvia-pagination
-      numberOfElements="156"
+      numberOfElements="32"
       [value]="defaultPaginationValue"
       [alignment]="'right'"
       dropdownMenuPosition="top"
+      (valueOnChange)="logValue('Pagination', $event.detail.value)"
     ></elvia-pagination>
   </div>
 
