--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.scss
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.scss
@@ -14,8 +14,9 @@ body {
 .theme-toggle-button {
   // sticky position at the bottom of the page
   position: fixed;
-  bottom: 16px;
+  bottom: 48px;
   left: 16px;
+  z-index: 1000;
 }
 
 h1 {
