--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -1,5 +1,6 @@
 <h1>Angular Preview</h1>
-<div class="components-examples">
+<button class="e-btn theme-toggle-button" (click)="toggleTheme()">Toggle theme</button>
+<div class="components-examples" id="dev-component-examples">
   <div class="example-wrapper">
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
