--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.scss
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.scss
@@ -2,14 +2,26 @@ body {
   color: #000;
   font-family: 'Red Hat Text', Verdana, sans-serif;
 }
+.theme-toggle-button {
+  position: fixed;
+  bottom: 48px;
+  left: 16px;
+  z-index: 999999;
+}
 .components-examples {
   max-width: 700px;
   width: 100%;
   margin: 0 auto;
-}
-.example-wrapper {
-  border-top: 1px solid #29d305;
-  padding: 32px 32px 72px;
+
+  .example-wrapper {
+    border-top: 1px solid #29d305;
+    padding: 32px 32px 72px;
+  }
+  &.e-theme-dark {
+    .example-wrapper {
+      border-top-color: #35bb18;
+    }
+  }
 }
 
 h1 {
