--- a/packages/web/src/app/doc-pages/components/slider-doc/slider-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/slider-doc/slider-doc.component.html
@@ -37,6 +37,28 @@
     </ng-container>
   </app-component-section>
 
+  <app-component-section [sectionTitle]="'Options'">
+    <ng-container ngProjectAs="sectionContent">
+      <app-component-subsection [sectionTitle]="'Unit'">
+        <ng-container ngProjectAs="sectionContent">
+          The
+          <code>unit</code>
+          prop allows you to add a custom suffix to the value displayed in the tooltip of the slider. For
+          example, if you want to display the value as a kilowatt-hour, you can add " kWh" as the unit.
+          <p>
+            Note that the space punctuation is not implicitly included in the unit. The return value will
+            remain unchanged.
+          </p>
+        </ng-container>
+      </app-component-subsection>
+      <app-component-example-generator
+        [componentData]="sliderUnitCode"
+        [inlineExample]="true"
+        [tabIdPrefix]="'ceg-slider-unit-example'"
+      ></app-component-example-generator>
+    </ng-container>
+  </app-component-section>
+
   <!--ACCESSIBILITY-->
   <app-component-section [sectionTitle]="'Accessibility'">
     <ng-container ngProjectAs="sectionContent">
