--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -5,6 +5,10 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
+    <div>
+      <i class="e-icon e-icon--add_circle-filled-color e-icon--sm"></i>
+      <i class="e-icon e-icon--arrow_left_circle-color e-icon--sm"></i>
+    </div>
     <div class="e-bg-white"></div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
