feat(Sportlight): add dark mode

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -467,7 +467,8 @@
   <!--Spotlight-->
   <div class="example-wrapper">
     <h3>Spotlight</h3>
-    <!-- <elvia-spotlight [position]="{ horizontal: 300, vertical: 300 }" [radius]="80"></elvia-spotlight> -->
+    <!--     <elvia-spotlight [position]="{ horizontal: 300, vertical: 300 }" [radius]="80"></elvia-spotlight>
+ -->
   </div>
 
   <!--Tabs-->
