--- a/packages/web/src/app/shell/home/home.component.html
+++ b/packages/web/src/app/shell/home/home.component.html
@@ -60,17 +60,17 @@
               alt="Designsystem birthday illustration"
             />
             <img
-              *ngIf="christmas && !halloween"
+              *ngIf="christmas && !halloween && !isBirthday"
               src="assets/holidayIllustrations/ChristmasIllustration.png"
               alt="Designsystem christmas illustration"
             />
             <img
-              *ngIf="halloween && !christmas"
+              *ngIf="halloween && !christmas && !isBirthday"
               src="assets/holidayIllustrations/Halloween.png"
               alt="Designsystem halloween illustration"
             />
             <img
-              *ngIf="!christmas && !halloween"
+              *ngIf="!christmas && !halloween && !isBirthday"
               src="assets/HomeIllustration.png"
               alt="Designsystem illustration"
             />
